# MCP

./: Dockerfile.grafana  Dockerfile.langflow  Dockerfile.memory-stress  Dockerfile.prometheus  README.md  README_k8s_dashboard.md  backup-config.sh  check_mcp_server.sh  docker-compose.bridge.yml  docker-compose.yml  generate_anomalies.sh  grafana_metrics_report.md  k8s_simulator_data.json  kill_k8s_generators.sh  langflow-test.sh  langflow.py  langflow_component_guide.md  langflow_git_analyzer.py  mcp_component.py  mcp_component_system_prompt.md  mcp_run  mcp_server.py  metrics.json  pyproject.toml  requirements.txt  reset-all.sh  reset-langflow.sh  reset-prometheus.sh  run_k8s_simulator.sh  setup-prometheus.sh  test_docker_connectivity.sh  test_filesystem.py  test_git_diff.py  test_git_integration.py  test_langflow_integration.py
logs/: pod_info.txt  simulator_output.txt
mcp/: README.md  __init__.py  filesystem_service.py  git_service.py  mcp_runner.sh  model.py  prometheus_service.py  requirements_analyzer.py  server.py
mcp_grafana_bridge/: kubernetes_anomalies_20250319_224105.json  kubernetes_anomalies_20250319_230225.json  kubernetes_anomalies_20250319_234026.json  kubernetes_anomalies_20250319_234110.json  kubernetes_anomalies_20250319_234210.json  kubernetes_anomalies_20250319_234357.json  kubernetes_anomalies_20250319_234858.json  mcp_anomaly_detection.py  mcp_grafana_bridge.py  startup.sh
prometheus/: memory_alerts.yml  prometheus.yml  prometheus.yml.bak
scripts/: __init__.py  ai_anomaly_analysis.py  ai_memory_diagnostics.py  check_k8s_metrics.py  (+32 more)
(+22 files in other folders)
