[project]
name = "mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "gitpython>=3.1.44",
    "langflow>=1.1.1",
    "openai>=1.65.4",
    "prometheus-client>=0.21.1",
    "psutil>=7.0.0",
    "pydantic>=2.7.4",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
