[project]
name = "mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "gitpython>=3.1.44",
    "langflow>=1.1.1",
    "openai>=1.65.4",
    "prometheus-client>=0.21.1",
    "psutil>=7.0.0",
    "pydantic>=2.7.4",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*:",
    "ignore::DeprecationWarning:google.*:",
    "ignore::UserWarning:pydantic.*:",
]
asyncio_default_fixture_loop_scope = "function"
